# Tabiev-A.A.-uchpraktika

./: README.md
CMakeProject1/: CMakeLists.txt
CMakeProject1/CMakeProject1/Task1/: CMakeLists.txt  Task1.c
CMakeProject1/CMakeProject1/Task2/: CMakeLists.txt  Task2.c
CMakeProject1/CMakeProject1/Task3/: CMakeLists.txt  Task3.c
CMakeProject1/CMakeProject1/Task4/: CMakeLists.txt  Task4.c
CMakeProject1/CMakeProject1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
CMakeProject1/CMakeProject1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
CMakeProject1/CMakeProject1/Task7/: CMakeLists.txt  Task7_func.c  Task7_main.c
CMakeProject1/CMakeProject1/Task8/: CMakeLists.txt  Task8_func.c  Task8_main.c  func.h
CMakeProject2/: CMakeLists.txt
CMakeProject2/CMakeProject2/Task1/: CMakeLists.txt  Task1.c
CMakeProject2/CMakeProject2/Task2/: CMakeLists.txt  Task2.c
CMakeProject2/CMakeProject2/Task3/: CMakeLists.txt  Task3.c
CMakeProject3/: CMakeLists.txt
CMakeProject3/CMakeProject3/Task1/Task1do/: CMakeLists.txt  Task1.c
CMakeProject3/CMakeProject3/Task1/Task1for/: CMakeLists.txt  Task1f1.c  f.h
CMakeProject3/CMakeProject3/Task1/Task1while/: CMakeLists.txt  Task1.c  Task1f2.c  f.h
CMakeProject3/CMakeProject3/Task2/Task2do/: CMakeLists.txt  Task2.c  Task2f3.c  f.h
CMakeProject3/CMakeProject3/Task2/Task2for/: CMakeLists.txt
CMakeProject3/CMakeProject3/Task2/Task2while/: CMakeLists.txt  Task2f2.c  f.h
CMakeProject3/CMakeProject3/Task3/Task3do/: CMakeLists.txt  Task3.c  Task3f3.c  f.h
CMakeProject3/CMakeProject3/Task3/Task3for/: CMakeLists.txt  Task3.c  f.h
CMakeProject3/CMakeProject3/Task3/Task3while/: CMakeLists.txt  Task3.c  Task3f2.c
CMakeProject3/CMakeProject3/Task4/Task4do/: CMakeLists.txt  Task4.c  Task4f3.c  f.h
CMakeProject3/CMakeProject3/Task4/Task4for/: CMakeLists.txt  Task4.c  f.h
CMakeProject3/CMakeProject3/Task4/Task4while/: CMakeLists.txt
CMakeProject3/CMakeProject3/Task5/Task5do/: CMakeLists.txt  Task5.c  Task5f3.c  f.h
CMakeProject3/CMakeProject3/Task5/Task5for/: CMakeLists.txt  Task5.c  Task5f1.c  f.h
CMakeProject3/CMakeProject3/Task5/Task5while/: CMakeLists.txt
CMakeProject3/CMakeProject3/Task6/Task6do/: CMakeLists.txt  Task1f3.c  f.h
CMakeProject3/CMakeProject3/Task6/Task6for/: CMakeLists.txt  Task2f1.c  Task3f1.c  Task4f1.c
CMakeProject3/CMakeProject3/Task6/Task6while/: CMakeLists.txt  Task4f2.c  Task5f2.c  Task6.c  f.h
CMakeProject4/: CMakeLists.txt
CMakeProject4/CMakeProject4/Task1/: CMakeLists.txt  Task1.c  Task1f.c
CMakeProject4/CMakeProject4/Task2/: Task2.c  Task2f.c
CMakeProject4/CMakeProject4/Task3/: CMakeLists.txt  Task3.c  Task3f.c
CMakeProject4/CMakeProject4/Task4/: CMakeLists.txt  Task4f.c
CMakeProject4/CMakeProject4/Task5/: CMakeLists.txt  Task5.c  Task5f.c
CMakeProject4/CMakeProject4/Task6/: CMakeLists.txt  Task6.c  Task6f.c
CMakeProject5/: CMakeLists.txt
CMakeProject5/CMakeProject5/Task1/: CMakeLists.txt  Task1.c
CMakeProject5/CMakeProject5/Task2/: CMakeLists.txt  Task2.c  Task2f.c
CMakeProject5/CMakeProject5/Task3/: CMakeLists.txt  Task3.c  Task3f.c
CMakeProject5/CMakeProject5/Task5/: Task5f.c
CMakeProject5/CMakeProject5/Task6/: Task6f.c
CMakeProject5/CMakeProject5/Task7/: CMakeLists.txt  Task1f.c  Task3f.c  Task4f.c  Task7.c
CMakeProject6/: CMakeLists.txt
CMakeProject6/CMakeProject6/Task1/: CMakeLists.txt  Task1.c
CMakeProject7/: CMakeLists.txt
CMakeProject7/CMakeProject7/Task1/: CMakeLists.txt  Task1.c  Task1f.c
CMakeProject7/CMakeProject7/Task2/: CMakeLists.txt  Task2.c  Task2f.c
CMakeProject7/CMakeProject7/Task3/: Task3.c  Task3f.c
CMakeProject7/CMakeProject7/Task4/: CMakeLists.txt  Task4.c  Task4f.c
CMakeProject7/CMakeProject7/Task5/: CMakeLists.txt  Task5.c  Task5f.c
CMakeProject7/CMakeProject7/Task6/: CMakeLists.txt  Task6.c  Task6f.c
CMakeProject7/CMakeProject7/Task7/: CMakeLists.txt  Task1.c
