# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeProject1")
project ("CMakeProject2")
project ("CMakeProject3")
project ("CMakeProject4")
project ("CMakeProject5")
project ("CMakeProject6")
project ("CMakeProject7")
project ("CMakeProject8")
project ("CMakeProject9")
project ("CMakeProject10")
project ("CMakeProject11")
project ("CMakeProject12")
project ("CMakeProject13")
project ("CMakeProject14")
project ("CMakeProject15")
project ("CMakeProject16")
project ("CMakeProject17")
project ("CMakeProject18")
# Включите подпроекты.
add_subdirectory ("CMakeProject3\\Task1\\Task1for")
add_subdirectory ("CMakeProject3\\Task1\\Task1while")
add_subdirectory ("CMakeProject3\\Task1\\Task1do")
add_subdirectory ("CMakeProject3\\Task2\\Task2for")
add_subdirectory ("CMakeProject3\\Task2\\Task2while")
add_subdirectory ("CMakeProject3\\Task2\\Task2do")
add_subdirectory ("CMakeProject3\\Task3\\Task3for")
add_subdirectory ("CMakeProject3\\Task3\\Task3while")
add_subdirectory ("CMakeProject3\\Task3\\Task3do")
add_subdirectory ("CMakeProject3\\Task4\\Task4do")
add_subdirectory ("CMakeProject3\\Task4\\Task4for")
add_subdirectory ("CMakeProject3\\Task4\\Task4while")
add_subdirectory ("CMakeProject3\\Task5\\Task5for")
add_subdirectory ("CMakeProject3\\Task5\\Task5while")
add_subdirectory ("CMakeProject3\\Task5\\Task5do")
add_subdirectory ("CMakeProject3\\Task6\\Task6for")
add_subdirectory ("CMakeProject3\\Task6\\Task6while")
add_subdirectory ("CMakeProject3\\Task6\\Task6do")