# CMakeList.txt: проект CMake для CMakeProject5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (CMakeProject7 "Task7.c" "Task6f.c" "Task5f.c" "Task4f.c" "Task3f.c" "Task2f.c" "Task1f.c")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
